--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -21,8 +21,6 @@
 .header-logo {
   padding: 15px 20px 5px 20px;
   margin: 0 20px 2px 0;
-  /*display: flex;*/
-  /*float: left;*/
 }
 
 .logo {
@@ -49,27 +47,22 @@
   float: left;
   color: #777;
   padding: 5px 40px 0 0;
-  /*font-size: 14px;*/
 }
 
 .nav-links li:hover {
   color: #ccc;
-  /*font-size: 14px;*/
 }
 
 .user-profile-link {
   margin-left: auto;
-  /*position: rel*/
   display: flex;
   max-height: 40px;
-  /*padding: 0px 0 0 20px;*/
 }
 
 .user-profile-link > h2 {
   float: left;
-  margin: 20px 0;
+  margin: 25px 0 0 0;
   vertical-align: center;
-  /*padding: 0px 0 0 20px;*/
 }
 
 .profile-pic {
@@ -78,5 +71,5 @@
   float: left;
   width: 40px;
   height: 40px;
-  background-color: lightblue;
+  background-color: gray;
 }
