--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -57,7 +57,7 @@
   margin-left: auto;
   display: flex;
   max-height: 40px;
-
+  padding-bottom: 15px;
 }
 
 .user-profile-link > h2 {
@@ -77,7 +77,13 @@
 
 .dropdown > li {
   position: relative;
+}
+
+.dropdown h3 {
   padding: 5px 10px;
+}
+.dropdown > li:hover {
+  cursor: pointer;
 }
 
 .dropdown {
