--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -1,9 +1,10 @@
 body, h1, h2, h3, h4, h5, ul, li,
 header, footer, div, span, article, section,
-main, aside, caption, img, a {
+main, aside, caption, img, a, input, button, textarea {
   margin: 0;
   padding: 0;
   border: 0;
+  outline: none;
 
   font: inherit;
   line-height: inherit;
@@ -33,6 +34,5 @@ body {
   font-family: 'Helvetica-Neue', 'Helvetica', sans-serif;
   background-color: #262626;
   color: #C0C0C0;
-  /*font-weight: lighter;*/
   letter-spacing: 0.6px;
 }
