--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -2,5 +2,8 @@
   <% if logged_in? %>
   	window.currentUser = <%= render("api/users/user.json.jbuilder", user: current_user).html_safe %>
   <% end %>
+  window.logo = "<%= image_url('logo1.png') %>";
+  window.close = "<%= image_url('close-icon-29.png') %>";
+  window.wheel = "<%= image_url('color-wheel.png') %>";
 </script>
 <main id="root"></main>
