--- a/app/assets/stylesheets/auth_form.css
+++ b/app/assets/stylesheets/auth_form.css
@@ -1,12 +1,14 @@
 .modal {
   position: absolute;
+  z-index: 999;
+  top: 0;
   width: 100%;
   height: 100%;
   background-image: linear-gradient(
     to bottom,
-    rgba(10, 0, 5, .6),
-    rgba(10, 0, 5, .4),
-    rgba(10, 0, 5, .8)
+    rgba(40, 40, 40, .6),
+    rgba(40, 35, 35, .3),
+    rgba(40, 35, 35, .8)
     );
 }
 
@@ -108,12 +110,12 @@
   border: 1px solid #262626;
   border-top: 1px solid #444;
   height: 36px;
+  /*background-color: #4675AD;*/
   background-image: linear-gradient(
     to bottom,
     #4675AD,
     #416DA1
     );
-  /*background-color: #4675AD;*/
   font-size: 16px;
   color: #ccc;
   letter-spacing: 0.08em;
@@ -128,6 +130,10 @@
     #4675AD,
     #4675AD
     );
+}
+
+.button .demo {
+  back
 }
 
 ::-webkit-input-placeholder {
