--- a/app/assets/stylesheets/auth_form.css
+++ b/app/assets/stylesheets/auth_form.css
@@ -12,18 +12,19 @@
     );
 }
 
-.session-form-container {
+.modal .session-form-container {
   width: 400px;
+  background: #333;
+  padding: 20px 20px 30px 20px;
   position: fixed;
   top: 10%;
   left: 50%;
   margin-left: -200px;
   box-sizing: border-box;
-  color: #777;
+  color: #aaa;
 }
 
 .close {
-  margin-top: 10px;
   float: right;
   width: 24px;
 }
