--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -14,7 +14,7 @@
   display: flex;
   width: 97%;
   min-width: 750px;
-  max-width: 1200px;
+  /*max-width: 1200px;*/
   margin: 0 auto;
 }
 
@@ -67,6 +67,7 @@
   font-size: 14px;
   color: #888;
   padding-top: 25px;
+  padding-right: 25px;
 }
 
 .login-signup a{
