--- a/app/assets/stylesheets/explore_items.css
+++ b/app/assets/stylesheets/explore_items.css
@@ -11,16 +11,17 @@
 
 .cooltip {
   display: inline-block;
+  -webkit-flex:1;
+	-moz-flex:1;
+	-ms-flex:1;
   flex-grow: 1;
   flex-shrink: 1;
   flex-basis: 20%;
   box-sizing: border-box;
   min-width: 280px;
-  /*max-width: 250px;*/
   margin: 4.16% 20px 0 20px;
-
-  -webkit-transition: width 600ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
-  transition: width 600ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  /*-webkit-transition: width 600ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  transition: width 600ms cubic-bezier(0.445, 0.05, 0.55, 0.95);*/
 }
 
 .item {
