Style actions panel on theme view

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -3,7 +3,7 @@
   	window.currentUser = <%= render("api/users/user.json.jbuilder", user: current_user).html_safe %>
   <% end %>
   window.close = "<%= image_url('close.png') %>";
-  window.wheel = "<%= image_url('color-wheel.png') %>";
+  window.wheel = "<%= image_url('color_wheel.png') %>";
   window.logo = "<%= image_url('logo1.png') %>";
   window.edit = "<%= image_url('edit.png') %>";
   window.info = "<%= image_url('info.png') %>";
