--- a/app/assets/stylesheets/auth_form.css
+++ b/app/assets/stylesheets/auth_form.css
@@ -4,12 +4,21 @@
   top: 0;
   width: 100%;
   height: 100%;
+}
+
+.splashlink {
+  display: block;
+  position: relative;;
+  width: 100%;
+  height: 100%;
   background-image: linear-gradient(
     to bottom,
-    rgba(40, 40, 40, .6),
+    rgba(25, 25, 25, .6),
     rgba(40, 35, 35, .3),
-    rgba(40, 35, 35, .8)
+    rgba(30, 30, 30, .8)
     );
+
+  /*background: red;*/
 }
 
 .modal .session-form-container {
