--- a/app/assets/stylesheets/theme_view.css
+++ b/app/assets/stylesheets/theme_view.css
@@ -30,9 +30,10 @@
   /*float: right;*/
 }
 
-.edit-title > .view-theme {
+.view-theme {
   margin-top: 15px;
   /*width: 83%*/
+  margin-bottom: 24px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   /*display: inline;*/
@@ -50,18 +51,38 @@
   box-sizing: border-box;
 }
 
+
+.fullscreen {
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  border: none;
+  margin: 0;
+  top: 0;
+  left: 0;
+}
+
+.fullscreen > .view-swatch {
+  width: 20%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+
+}
+
 .metadata {
   display: flex;
-  height: 50px;
   /*background-color: red;*/
   box-sizing: border-box;
-  border: 5px solid #333;
+  border: 5px solid #292929;
+  background: #333333;
 }
 
 .metadata > .comments-wrapper {
   display: inline;
-  background: #292929;
   width: auto;
+  height: 100%;
   /*flex-basis: 75%;*/
   /*float: left;*/
   box-sizing: border-box;
@@ -69,16 +90,4 @@
   height: 100%;
   /*width: 75%;*/
 
-}
-
-.metadata > .actions-panel {
-  box-sizing: border-box;
-  border-left: 5px solid #333;
-  /*flex-basis: 25%;*/
-  width: 275px;
-  display: inline;
-  background: #4B4B4B;
-  margin-left: auto;
-  height: 100%;
-  float: right;
 }
