--- a/app/assets/stylesheets/create.css
+++ b/app/assets/stylesheets/create.css
@@ -88,7 +88,6 @@
 .marker > div:hover {
   box-shadow: 0 0 0 2pt rgba(240, 240, 240, 0.9);
   /*border: 3px solid rgba(240, 240, 240, 0.9);*/
-
 }
 
 .themeBox {
@@ -99,4 +98,57 @@
 .themeBox > li {
   width: 20%;
   padding-bottom: 20%;
+}
+
+#slider-list {
+  display: flex;
+}
+
+#slider-list:first-child > input[type=range]{
+  border-top-left-radius: 50%;
+  border-bottom-left-radius: 50px;
+}
+
+.slider {
+
+  width: 20%;
+}
+
+input[type=range] {
+  -webkit-appearance: none;
+  border: 1px solid #000000;
+  height: 20px;
+  width: 100%;
+  /*background: transparent;*/
+  cursor: pointer;
+}
+
+.hue {
+  background-image: linear-gradient(
+    to right,
+    hsl(0, 100%, 50%),
+    hsl(30, 100%, 50%),
+    hsl(60, 100%, 50%),
+    hsl(90, 100%, 50%),
+    hsl(120, 100%, 50%),
+    hsl(150, 100%, 50%),
+    hsl(180, 100%, 50%),
+    hsl(210, 100%, 50%),
+    hsl(240, 100%, 50%),
+    hsl(270, 100%, 50%),
+    hsl(300, 100%, 50%),
+    hsl(330, 100%, 50%)
+    );
+}
+
+input[type=range]::-webkit-slider-thumb {
+  /*box-shadow: 0px 0px 0px #000000;*/
+  border: 0px solid #000000;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background: #ccc;
+  cursor: pointer;
+  -webkit-appearance: none;
+  /*margin-top: -3.5px;*/
 }
