Commit all files due to possible HDD issue

--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -16,6 +16,15 @@ main, aside, caption, img, a, input, button, textarea {
   background: transparent;
 
   display: block;
+
+
+
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 img {
