--- a/app/assets/stylesheets/create.css
+++ b/app/assets/stylesheets/create.css
@@ -34,23 +34,19 @@
   position: relative;
   /*display: block;*/
   /*display: flex;*/
-  margin: 0 auto;
-  width: 250px;
-  height: 250px;
+  margin: 10px auto 5px auto;
+  width: 25%;
+  height: 25%;
   border: 1px solid #ccc;
   box-shadow: 0 0 0 3pt black;
   border-radius: 50%;
   /*box-sizing: border-box;d*/
 }
 
-/*#colorwheel:before {
-  content = url(../image/color_wheel.png);
-}*/
+
 #hsl-wheel {
   position: relative;
   margin: 0 auto;
-  width: 250px;
-  height: 250px;
 }
 
 .markertails {
@@ -64,36 +60,39 @@
 #colorwheel > .marker {
   position: absolute !important;
   margin: 0 auto;
+  width: 6%;
+  height: 6%;
   align-content: center;
-  border: 2px solid black;
+  /*border: 2px solid black;*/
+  pointer-events: auto;
+
 }
 
 #colorwheel > .marker > div {
   position: absolute;
-  right: -7px;
-  top: -7px;
-  width: 14px;
-  height: 14px;
+  right: 50%;
+  bottom: 50%;
+  /*top: -7px;*/
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   box-shadow: 0 0 0 2pt rgba(240, 240, 240, 0.5);
   z-index: 100;
 }
 #colorwheel > .marker > div:active {
-  right: -9px;
-  top: -9px;
-  width: 18px;
-  height: 18px;
+  /*right: -9px;
+  top: -9px;*/
+  width: 115%;
+  height: 115%;
   box-shadow: 0 0 0 2pt rgba(240, 240, 240, 0.9);
 }
 
 .marker > div:hover {
   box-shadow: 0 0 0 2pt rgba(240, 240, 240, 0.9);
-  /*border: 3px solid rgba(240, 240, 240, 0.9);*/
 }
 
 .themeBox {
   display: flex;
-  /*margin-top: 20px;*/
 }
 
 .themeBox > li {
@@ -118,6 +117,24 @@
 
 .slider {
   width: 20%;
+}
+
+.slider > .not-selected {
+  background-image: none !important;
+  background-color: #ccc;
+  border: 10px solid orange;
+}
+
+.slider .not-selected hue {
+  background-image: none !important;
+  background-color: #ccc;
+  border: 10px solid orange;
+}
+
+.slider .not-slected lightness {
+  background-image: none !important;
+  background-color: #ccc;
+  border: 10px solid orange;
 }
 
 input-range {
