--- a/app/assets/stylesheets/create.css
+++ b/app/assets/stylesheets/create.css
@@ -87,8 +87,14 @@
   box-shadow: 0 0 0 2pt rgba(240, 240, 240, 0.9);
 }
 
-.marker > div:hover {
+#colorwheel .marker div:hover {
+border-radius: 50%;
   box-shadow: 0 0 0 2pt rgba(240, 240, 240, 0.9);
+}
+
+#colorwheel .selected > div {
+  border-radius: 50%;
+  box-shadow: 0 0 0 2pt rgba(255, 255, 255, 0.7);
 }
 
 .themeBox {
@@ -100,8 +106,13 @@
   padding-bottom: 20%;
 }
 
+.themeBox > .selected {
+  border: 2px solid #ccc;
+  border-bottom: none;
+  box-sizing: content-box;
+}
+
 #slider-list {
-  margin-top: 20px;
   display: flex;
 }
 
@@ -116,31 +127,23 @@
 }
 
 .slider {
+  padding-top: 20px;
   width: 20%;
+  /*border: none;*/
+  /*border: 0px solid transparent;*/
 }
 
-.slider > .not-selected {
-  background-image: none !important;
-  background-color: #ccc;
-  border: 10px solid orange;
+.slider .selected{
 }
 
-.slider .not-selected hue {
-  background-image: none !important;
-  background-color: #ccc;
-  border: 10px solid orange;
-}
-
-.slider .not-slected lightness {
-  background-image: none !important;
-  background-color: #ccc;
-  border: 10px solid orange;
+.slider .not-selected {
+  background: #777 !important;
 }
 
 input-range {
   margin-bottom: 10px;
   -webkit-appearance: none;
-  border: 1px solid #000000;
+  border: 0px solid transparent;
   height: 20px;
   width: 100%;
   /*background: transparent;*/
@@ -150,7 +153,7 @@ input-range {
 input[type=range] {
   margin-bottom: 10px;
   -webkit-appearance: none;
-  border: 1px solid #000000;
+  border: 0px solid transparent;
   height: 20px;
   width: 100%;
   /*background: transparent;*/
@@ -177,7 +180,6 @@ input[type=range] {
 
 input[type=range]::-webkit-slider-thumb {
   /*box-shadow: 0px 0px 0px #000000;*/
-  border: 0px solid #000000;
   height: 20px;
   width: 20px;
   border-radius: 50%;
