--- a/app/assets/stylesheets/theme_view.css
+++ b/app/assets/stylesheets/theme_view.css
@@ -11,18 +11,18 @@
   margin: 22px 15px 20px 0;
 }
 
-.edit-title > .title {
+.edit-title  .title {
   /*display: inline;*/
   /*float: left;*/
-  width: auto;
+  width: 500px;
   font-size: 18px;
   margin-right: 15px;
   letter-spacing: 0.1em;
 }
 
-.edit-title > .pencil {
-  /*display: inline;*/
-  /*position: relative;*/
+.edit-title  .pencil {
+  display: none;
+  position: relative;
   /*right: 54px;*/
   padding-top: 3px;
   width: 15px;
