--- a/app/assets/stylesheets/auth_form.css
+++ b/app/assets/stylesheets/auth_form.css
@@ -8,7 +8,7 @@
 
 .splashlink {
   display: block;
-  position: relative;;
+  position: fixed;
   width: 100%;
   height: 100%;
   background-image: linear-gradient(
