--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -1,3 +1,4 @@
+
 .header {
   background-image: linear-gradient(
     to bottom,
@@ -92,14 +93,14 @@
   /*background-color: gray;*/
 }
 
-.dropdown > li {
+.dropdown > a {
   position: relative;
 }
 
-.dropdown h3 {
+.dropdown a {
   padding: 5px 10px;
 }
-.dropdown > li:hover {
+.dropdown > a:hover {
   cursor: pointer;
 }
 
