--- a/app/assets/stylesheets/theme_view.css
+++ b/app/assets/stylesheets/theme_view.css
@@ -12,7 +12,7 @@
 }
 
 .edit-title  .title {
-  /*display: inline;*/
+  display: inline;
   /*float: left;*/
   width: 500px;
   font-size: 18px;
@@ -21,10 +21,10 @@
 }
 
 .edit-title  .pencil {
-  display: none;
+  display: inline;
   position: relative;
   /*right: 54px;*/
-  padding-top: 3px;
+  padding: 3px 15px 0 0;
   width: 15px;
   height: 15px;
   /*float: right;*/
