--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -14,5 +14,6 @@
   window.search = "<%= image_url('search.png') %>";
   window.trash = "<%= image_url('trash.png') %>";
   window.user = "<%= image_url('user.png') %>";
+  window.check = "<%= image_url('check.png') %>";
 </script>
 <main id="root"></main>
