--- a/app/assets/stylesheets/actions_panel.css
+++ b/app/assets/stylesheets/actions_panel.css
@@ -62,3 +62,37 @@
   margin-right: 10px;
   margin-top: -2px;
 }
+
+.actions-panel .box-below {
+  display: block;
+}
+
+.box-below > .info-type {
+  display: block;
+}
+
+#tagbox {
+  border: 1px solid black;
+  margin: 10px auto;
+  float: left;
+  display: flex;
+  padding: 7px 10px 24px 10px;
+  background-color: #333333;
+  width: 215px;
+}
+
+
+#tagbox .tag {
+  font-weight: bold;
+  margin: 0;
+  display: inline-block;
+  font-size: 12px;
+  color: #A9A9A6;
+  background-color: #515151;
+  padding: 10px 10px 10px 5px;
+}
+
+#tagbox .tag:hover {
+  color: #515151;
+  background-color: #A9A9A6;
+}
