--- a/app/assets/stylesheets/actions_panel.css
+++ b/app/assets/stylesheets/actions_panel.css
@@ -84,12 +84,18 @@
 
 #tagbox .tag {
   font-weight: bold;
-  margin: 0;
-  display: inline-block;
+  margin: 1px;
+  float: left;
+  max-width: 70px;
+  /*display: inline;*/
   font-size: 12px;
   color: #A9A9A6;
   background-color: #515151;
   padding: 10px 10px 10px 5px;
+}
+
+#tagbox > .add-tag {
+  height: 15px;
 }
 
 #tagbox .tag:hover {
