Add Theme to MyThemes upon save

--- a/app/assets/stylesheets/valuesboxes.css
+++ b/app/assets/stylesheets/valuesboxes.css
@@ -37,6 +37,8 @@
 
 .color-format > li {
   width: 25px;
+  -webkit-user-select: all;
+  user-select: all;
   text-align: center;
   font-size: 12px;
   color: #585856;
