--- a/app/assets/stylesheets/theme_view.css
+++ b/app/assets/stylesheets/theme_view.css
@@ -1,5 +1,5 @@
 .sk-folding-cube {
-  margin: 20px auto;
+  margin: 150px auto;
   width: 40px;
   height: 40px;
   position: relative;
@@ -19,11 +19,11 @@
 .sk-folding-cube .sk-cube:before {
   content: '';
   position: absolute;
-  top: 0;
-  left: 0;
+  top: -2px;
+  left: -2px;
   width: 100%;
   height: 100%;
-  background-color: #333;
+  background-color: #ccc;
   -webkit-animation: sk-foldCubeAngle 2.4s infinite linear both;
           animation: sk-foldCubeAngle 2.4s infinite linear both;
   -webkit-transform-origin: 100% 100%;
