Add heroku link to readme

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -4,7 +4,7 @@
   <% end %>
   window.close = "<%= image_url('close.png') %>";
   window.wheel = "<%= image_url('color_wheel.png') %>";
-  window.logo = "<%= image_url('logo1.png') %>";
+  window.logo = "<%= image_url('color_wheel.png') %>";
   window.edit = "<%= image_url('edit.png') %>";
   window.info = "<%= image_url('info.png') %>";
   window.link = "<%= image_url('link.png') %>";
