add padding to color wheel

--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -40,7 +40,7 @@ img {
 }
 
 body {
-  font-family: 'Helvetica-Neue', 'Helvetica', sans-serif;
+  font-family: 'Muli', sans-serif;
   background-color: #262626;
   color: #C0C0C0;
   letter-spacing: 0.6px;
