--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -16,5 +16,15 @@
   window.trash = "<%= image_url('trash.png') %>";
   window.user = "<%= image_url('user.png') %>";
   window.check = "<%= image_url('check.png') %>";
+
+</script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-100773596-1', 'auto');
+  ga('send', 'pageview');
 </script>
 <main id="root"></main>
